Bug 160192 - konsoleprofile 'ColorScheme' no longer works
Summary: konsoleprofile 'ColorScheme' no longer works
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-01 01:31 UTC by Matthew Woehlke
Modified: 2008-04-22 00:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Woehlke 2008-04-01 01:31:21 UTC
Version:           2.1 (using Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.1.2 
OS:                Linux

I switched to KDE4 about March 20 and started integrating it into my workflow, including use of the new profile-editing escape sequence (ala konsoleprofile), 'ColorScheme=<blah>' specifically. As of some time last week (March 24 or later), this is no longer working; my color scheme is not changed.
Comment 1 Robert Knight 2008-04-22 00:06:32 UTC
SVN commit 799576 by knight:

Fix konsoleprofile changes to view-related properties not

being applied.

BUG: 160192


 M  +2 -0      SessionManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=799576