Fix konsoleprofile changes to view-related properties not

being applied.

BUG: 160192

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=799576